FILE(GLOB_RECURSE headers_Net_H *.h)
FILE(GLOB_RECURSE sources_Net_CPP *.cpp)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/..

	${ASIO_INCLUDE_DIR}
)

SET(net_SRCS
	${headers_Net_H}
	${sources_Net_CPP}
)

IF(WIN32)
	IF(MSVC)
		#SET(CMAKE_CXX_FLAGS "-DWIN32_LEAN_AND_MEAN -D_WIN32_WINNT=0x0501 -EHsc")
		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
	ENDIF(MSVC)
ENDIF(WIN32)

ADD_LIBRARY(net STATIC
	${net_SRCS}
)

IF(WIN32)
	IF(MSVC)
		SET_TARGET_PROPERTIES(net PROPERTIES FOLDER "engine")
		SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin)
	ENDIF()
ELSEIF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")
	SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin/${CMAKE_BUILD_TYPE}/)
ENDIF()
