file(GLOB_RECURSE utils_SRCS *.h *.cpp)

include_directories(
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/..

  ${ASIO_INCLUDE_DIR}
)

IF(WIN32)
    IF(MSVC)
        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
        SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
    ENDIF(MSVC)
ENDIF(WIN32)

add_library(utils STATIC
  ${utils_SRCS}
)

IF(WIN32)
  IF(MSVC)
    SET_TARGET_PROPERTIES(utils PROPERTIES FOLDER "engine")
    SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin)
  ENDIF()
ELSEIF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")

    SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin/${CMAKE_BUILD_TYPE}/)
ENDIF()
